--- a/index.html
+++ b/index.html
@@ -47,17 +47,14 @@
           </label>
         </div>
         <div class="campo">
-          <label for="faixa-etaria">Faixa Etária:</label>
-            <select name="faixa-etaria" id="faixa-etaria">
-              <option value="-1">Selecione uma faixa</option>
-              <option value="0-2">Bebê</option>
-              <option value="3-10">3 a 10 anos</option>
-              <option value="11-17">13 a 17 anos</option>
-              <option value="18-24">18 a 24 anos</option>
-              <option value="25-34">25 a 34 anos</option>
-              <option value="35-44">35 a 44 anos</option>
-              <option value="45-64">45 a 64 anos</option>
-              <option value="65+">65 anos ou mais</option>
+          <label for="perfil-etaria">Perfil Etário:</label>
+            <select name="perfil-etaria" id="perfil-etaria">
+              <option value="-1">Selecione um perfil</option>
+              <option value="bebe">Bebê</option>
+              <option value="crianca">Criança</option>
+              <option value="adulto">Adulto</option>
+              <option value="idoso">Idoso</option>
+              <option value="gestante">Gestante</option>
             </select>
         </div>
 
