atualizando a versão do Google Maps API

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
   <script src="script.js" defer></script>
   
   <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDCSVVcN3PyrmutpPrWAoMQDnX4u7g0wHE&callback=mostrarMapa" async defer></script> -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDCSVVcN3PyrmutpPrWAoMQDnX4u7g0wHE&callback=mostrarMapa&libraries=marker" async defer></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDCSVVcN3PyrmutpPrWAoMQDnX4u7g0wHE&callback=mostrarMapa&libraries=marker&v=weekly" async defer></script>
 
 </body>
 </html>
