Programação em pares: Adicionado o som que acompanha o metrônomo, ajustado termos técnicos e inicio do contador de ciclos.

--- a/index.html
+++ b/index.html
@@ -78,11 +78,14 @@
     <section id="container-manipulacao" aria-label="Controles de reanimação">
       <!-- Botão principal -->
       <button id="A" class="item1">INICIAR MASSAGEM CARDÍACA</button>
+      <!-- <button id="A" class="item1">INICIAR MANOBRA COMPPRESSÃO TORÁCICA</button> -->
 
       <!-- Controles lado a lado -->
       <div class="controles-row">
         <div class="item2" id="controle-metronomo">
-          <h3>Metrônomo</h3>
+          <h3>Qualidade da Compressão</h3>
+          <!-- <h3>Execução da manobra</h3>
+          <h3>Execução da movimento</h3> -->
           <div class="metronomo" role="status" aria-live="polite"></div>
         </div>
 
@@ -130,8 +133,8 @@
 
   <script src="script.js" defer></script>
   
-  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDCSVVcN3PyrmutpPrWAoMQDnX4u7g0wHE&callback=mostrarMapa" async defer></script> -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDCSVVcN3PyrmutpPrWAoMQDnX4u7g0wHE&callback=mostrarMapa&libraries=marker&v=weekly" async defer></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDCSVVcN3PyrmutpPrWAoMQDnX4u7g0wHE&callback=mostrarMapa" async defer></script>
+  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDCSVVcN3PyrmutpPrWAoMQDnX4u7g0wHE&callback=mostrarMapa&libraries=marker&v=weekly" async defer></script> -->
 
 </body>
 </html>
