adicionado modo tradutor de termos

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </section>
 
     <section class="flex-container" aria-label="Início da reanimação">
-      <h2 class="flex-controle">Reanimação Cardiopulmonar</h2>
+      <h2 id="txtRcp" class="flex-controle">Reanimação Cardiopulmonar</h2>
     </section>
 
     <section id="container-manipulacao" aria-label="Controles de reanimação">
@@ -83,18 +83,18 @@
       <!-- Controles lado a lado -->
       <div class="controles-row">
         <div class="item2" id="controle-metronomo">
-          <h3>Qualidade da Compressão</h3>
+          <h3 id="txtQualidade">Qualidade da Compressão</h3>
           <!-- <h3>Execução da manobra</h3>
           <h3>Execução da movimento</h3> -->
           <div class="metronomo" role="status" aria-live="polite"></div>
         </div>
         <div class="item3">
             <div>
-                <h3>Cronômetro</h3>
+                <h3 id="txtCronometro">Cronômetro</h3>
                 <p id="temporizador">120</p>
             </div>
             <div>
-                <h3>Ciclos</h3>
+                <h3 id="txtCiclos">Ciclos</h3>
                 <p id="ciclos">0</p>
                 <!-- Botões de controle -->
                 <button id="btnTrocar" style="display:none;">Próximo Socorrista</button>
@@ -133,8 +133,10 @@
 
 
   </main>
-
-  <script src="js/script.js" defer></script>
+      <button id="tradutor" onclick="alternarModo()">TRADUZIR</button>
+  
+ <script src="js/traducao.js"></script>
+ <script src="js/script.js" defer></script>
   
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDCSVVcN3PyrmutpPrWAoMQDnX4u7g0wHE&callback=mostrarMapa" async defer></script>
   <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDCSVVcN3PyrmutpPrWAoMQDnX4u7g0wHE&callback=mostrarMapa&libraries=marker&v=weekly" async defer></script> -->
