Testes para verificar a pulsação do metronomo

--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="RCP, CPR, Reanimação Cardiopulmonar, ARES, SAMU, Emergência, SUS, Primeiros Socorros">
   <title>ARES - Assistente de Reanimação em Situações de Emergência e Suporte</title>
   <link rel="icon" type="image/png" href="img/favicon.png">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style2.css">
 </head>
 <body>
   <header>
@@ -80,7 +80,7 @@
       <!-- Controles lado a lado -->
       <div class="controles-row">
         <div class="item2" id="controle-metronomo">
-          <h3 id="txtQualidade">Qualidade da Compressão</h3>
+          <!-- <h3 id="txtQualidade">Qualidade da Compressão</h3> -->
           <div class="metronomo" role="status" aria-live="polite"></div>
         </div>
         <div class="item3">
