Mudança de logo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="O aplicativo ARES oferece orientações visuais, sonoras e cronometradas para auxiliar na realização correta dos primeiros socorros enquanto o atendimento profissional está a caminho.">
   <meta name="keywords" content="RCP, CPR, Reanimação Cardiopulmonar, ARES, SAMU, Emergência, SUS, Primeiros Socorros">
   <title>ARES - Assistente de Reanimação em Situações de Emergência e Suporte</title>
-  <link rel="icon" type="image/png" href="img/favicon.png">
+  <link rel="icon" type="image/png" href="img/logo.jpeg">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
