mudança de logo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header>
     <nav class="nav-br" aria-label="Menu principal">
       <a href="#" class="logo" aria-label="Página inicial">
-        <img src="img/logo.png" alt="Logo do ARES - coração estilizado">
+        <img src="img/logo3Semfundo.png" alt="Logo do ARES - coração estilizado">
       </a>
       <ul class="nav-list">
         <li class="item samu">
